apps/base/pigeon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pigeon
  labels:
    app: pigeon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pigeon
  template:
    metadata:
      labels:
        app: pigeon
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: website
          image: ghcr.io/isaiah-harville/pigeon/website:v0.2.0 # {"$imagepolicy": "flux-system:pigeon-website"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 96Mi
